<resources>
    <string name="app_name">EvenDemo</string>

    <!--LoginFragment-->
    <string name="hint_user_name">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="btn_login">登陆</string>
    <string name="login_user_name_error_tip">请输入正确的用户名</string>
    <string name="login_user_password_tip">请按照要求输入密码</string>
    <string name="login_success">登录成功</string>

    <!--View-->
    <string name="tab_view">View</string>
    <string name="registry_product_filter_option_more_view">+%d more</string>
    <string name="recycler_view_simple">简单的LinearLayoutManager布局</string>
    <string name="recycler_view_multiple_view_type">多ViewType LinearLayoutManager布局</string>
    <string name="test_string01">到了微信架构的v2.x时代，随着业务的快速发展，消息通知不及时和Android 2.3版本之前webview内存泄露问题开始突显。由于代码、内存、apk大小都在增长，对系统资源的占用越来越多，导致微信进程容易被系统回收。因此微信开始转向多进程架构，独立的通信进程保持长连接的稳定性，独立的webview进程也阻隔了内存泄露导致的问题。 </string>
    <string name="public_add">添加</string>
    <string name="public_delete">删除</string>
    <string name="recycler_view_features_add_hint">请输入添加的位置</string>

    <!--Bug-->
    <string name="tab_bug">Bug</string>

    <!--framework-->
    <string name="tab_frame_work">源码</string>
    <string name="frame_work_activity_lifecycle">Activity生命周期</string>
    <string name="frame_work_activity_single_top">SingleTop</string>
    <string name="frame_work_activity_single_task">SingleTask</string>
    <string name="frame_work_activity_single_instance">SingleInstance</string>
    <string name="frame_work_activity_standard">Standard</string>

    <!--开源框架-->
    <string name="tab_open_source">开源</string>


    <!--四大组件-->
    <string name="tab_component">四大组件</string>
    <string name="component_service">Service</string>
    <string name="component_service_start_service">startService</string>
    <string name="component_service_bind_service">bindService</string>
    <string name="component_service_un_bind_service">unBindService</string>
    <string name="component_service_stop_self">stopSelf</string>
    <string name="component_service_send_message_to_service">sendMessageToService</string>
    <string name="component_service_start_intent_service">startIntentService</string>
    <string name="component_service_download_music">下载音乐</string>

    <string name="component_content_provider">内容提供者</string>
    <string name="component_broadcast_receiver">BroadcastReceiver</string>
    <string name="component_broadcast_receiver_send_ordered_broadcast">sendOrderedBroadcast</string>
    <string name="component_broadcast_receiver_send_broadcast">sendBroadcast</string>
    <string name="component_broadcast_receiver_send_local_broadcast">sendLocalBroadcast</string>

    <!--样式-->
    <string name="tab_style">样式</string>


    <!--其他-->
    <string name="tab_other">其他</string>
    <string name="menu_search">搜索</string>

</resources>
