<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:title="@string/app_name"
            android:elevation="3dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_view"
            style="@style/ButtonLrgPrimary"
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            android:text="@string/tab_view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_bug"
            style="@style/ButtonLrgPrimary"
            android:layout_width="match_parent"
            android:text="@string/tab_bug" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_frame_work"
            style="@style/ButtonLrgPrimary"
            android:layout_width="match_parent"
            android:text="@string/tab_frame_work" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_open_source"
            style="@style/ButtonLrgPrimary"
            android:layout_width="match_parent"
            android:text="@string/tab_open_source" />


    </LinearLayout>
</layout>